# aliyun-odps-query

./: .gitignore  README.md  SKILL.md  pyproject.toml
docs/superpowers/plans/: 2026-03-26-odps-openclaw-skill-implementation.md
docs/superpowers/specs/: 2026-03-26-odps-openclaw-skill-design.md
scripts/: odps_query.py
src/odps_skill/: __init__.py  cli.py  client.py  config.py  diagnostics.py  formatters.py  metadata.py  query.py  schemas.py
tests/: test_cli.py  test_config.py  test_diagnostics.py  test_formatters.py  test_metadata.py  test_query_guardrails.py
