[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aliyun-odps-query"
version = "0.1.0"
description = "Local OpenClaw-friendly ODPS skill"
requires-python = ">=3.12"

[project.scripts]
odps-skill = "odps_skill.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
